Add word net lemmatizer and add custom stop word list.

--- a/notebooks/ML_Pipelines.ipynb
+++ b/notebooks/ML_Pipelines.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -39,9 +39,12 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.feature_selection import f_classif, SelectKBest\n",
     "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.externals import joblib\n",
     "\n",
     "from nltk.stem.snowball import SnowballStemmer\n",
     "from nltk.stem.porter import PorterStemmer\n",
+    "from nltk import word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "from collections import defaultdict\n",
@@ -71,7 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# add some custom stopwords to the list of stopwords \n",
+    "custom_stopwords = ['i', 'http', 'www']\n",
+    "ENGLISH_STOP_WORDS = set(ENGLISH_STOP_WORDS) | set(custom_stopwords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -128,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -136,7 +152,7 @@
    "source": [
     "class Parse():\n",
     "    TAGS = ['h1', 'h2', 'h3', 'h4', 'span',\\\n",
-    "            'a', 'label', 'meta-title', 'meta-description','li']\n",
+    "            'a', 'label_', 'meta-title', 'meta-description','li']\n",
     "    \n",
     "    @staticmethod\n",
     "    def read_html(urlid):\n",
@@ -207,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -220,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -232,30 +248,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dump parsed content to the disk\n",
+    "joblib.dump(parse_train, os.path.join(basepath, 'data/processed/train_raw_content.pkl'))\n",
+    "joblib.dump(parse_test, os.path.join(basepath, 'data/processed/test_raw_content.pkl'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# load pickle from the disk\n",
+    "parse_train = joblib.load(os.path.join(basepath, 'data/processed/train_raw_content.pkl'))\n",
+    "parse_test = joblib.load(os.path.join(basepath, 'data/processed/test_raw_content.pkl'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "feature_df = train[['body', 'title', 'urlid']]\n",
+    "feature_df = train[train.columns[26:]]\n",
     "feature_df['label'] = train.label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "features = ['body', 'title', 'urlid']"
+    "features = list(train.columns[27:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -290,28 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
    "source": [
-    "parse_train = Parse()\n",
-    "train"
+    "class LemmaTokenizer(object):\n",
+    "    def __init__(self):\n",
+    "        self.wnl = WordNetLemmatizer()\n",
+    "    \n",
+    "    def __call__(self, doc):\n",
+    "        return [self.wnl.lemmatize(t) for t in word_tokenize(doc)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -330,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -349,65 +397,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def remove_stopwords(x):\n",
-    "    return ' '.join([word for word in x.split(' ') if word not in ENGLISH_STOP_WORDS])\n",
-    "\n",
     "def stem_tokens(x):\n",
-    "    return ' '.join([sns.stem(word) for word in x.split(' ')])\n",
+    "    return ' '.join([sns.stem(word) for word in word_tokenize(x)])\n",
     "\n",
     "def preprocess_string(s):\n",
-    "    s = s.lower()\n",
-    "    stopwords_removed = remove_stopwords(s)\n",
     "    return stem_tokens(stopwords_removed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "strip_non_words = FunctionTransformer(\n",
-    "    lambda x: x.replace(r'^[A-Za-z0-9]+', ' ', regex=True), validate=False)\n",
+    "    lambda x: x.replace(r'[^A-Za-z0-9]+', ' ', regex=True), validate=False)\n",
     "\n",
     "pipeline = Pipeline([\n",
     "            ('strip', strip_non_words),\n",
     "            ('union', FeatureUnion([\n",
-    "                    ('raw_content', Pipeline([\n",
+    "                    ('h1_', Pipeline([\n",
     "                        ('var', VarSelect(keys='h1')),\n",
-    "                        ('tfidf', TfidfVectorizer(preprocessor=preprocess_string)),\n",
+    "                        ('tfidf', TfidfVectorizer(ngram_range=(1, 2), min_df=2, tokenizer=LemmaTokenizer(), stop_words=ENGLISH_STOP_WORDS, preprocessor=preprocess_string, strip_accents='unicode', norm='l2', sublinear_tf=True)),\n",
+    "                        ('svd', TruncatedSVD(n_components=50))\n",
+    "                    ])),\n",
+    "                    ('h2_', Pipeline([\n",
+    "                        ('var', VarSelect(keys='h2')),\n",
+    "                        ('tfidf', TfidfVectorizer(ngram_range=(1, 2), min_df=2, tokenizer=LemmaTokenizer(), stop_words=ENGLISH_STOP_WORDS, preprocessor=preprocess_string, strip_accents='unicode', norm='l2', sublinear_tf=True)),\n",
+    "                        ('svd', TruncatedSVD(n_components=50))\n",
+    "                    ])),\n",
+    "                    ('h3_', Pipeline([\n",
+    "                        ('var', VarSelect(keys='h3')),\n",
+    "                        ('tfidf', TfidfVectorizer(ngram_range=(1, 2), min_df=2, tokenizer=LemmaTokenizer(), stop_words=ENGLISH_STOP_WORDS, preprocessor=preprocess_string, strip_accents='unicode', norm='l2', sublinear_tf=True)),\n",
+    "                        ('svd', TruncatedSVD(n_components=50))\n",
+    "                    ])),\n",
+    "                    ('h4_', Pipeline([\n",
+    "                        ('var', VarSelect(keys='h4')),\n",
+    "                        ('tfidf', TfidfVectorizer(ngram_range=(1, 2), min_df=2, tokenizer=LemmaTokenizer(), stop_words=ENGLISH_STOP_WORDS, preprocessor=preprocess_string, strip_accents='unicode', norm='l2', sublinear_tf=True)),\n",
+    "                        ('svd', TruncatedSVD(n_components=50))\n",
+    "                    ])),\n",
+    "                    ('meta_title', Pipeline([\n",
+    "                        ('var', VarSelect(keys='meta-title')),\n",
+    "                        ('tfidf', TfidfVectorizer(ngram_range=(1, 2), min_df=2, tokenizer=LemmaTokenizer(), stop_words=ENGLISH_STOP_WORDS, preprocessor=preprocess_string, strip_accents='unicode', norm='l2', sublinear_tf=True)),\n",
+    "                        ('svd', TruncatedSVD(n_components=50)),\n",
+    "                        ('weight', Weights(weight=5))\n",
+    "                    ])),\n",
+    "                    ('meta_description', Pipeline([\n",
+    "                        ('var', VarSelect(keys='meta-description')),\n",
+    "                        ('tfidf', TfidfVectorizer(ngram_range=(1, 2), min_df=2, tokenizer=LemmaTokenizer(), stop_words=ENGLISH_STOP_WORDS, preprocessor=preprocess_string, strip_accents='unicode', norm='l2', sublinear_tf=True)),\n",
+    "                        ('svd', TruncatedSVD(n_components=50)),\n",
+    "                        ('weight', Weights(weight=3))\n",
+    "                    ])),\n",
+    "                    ('span_', Pipeline([\n",
+    "                        ('var', VarSelect(keys='span')),\n",
+    "                        ('tfidf', TfidfVectorizer(min_df=2, ngram_range=(1, 2), tokenizer=LemmaTokenizer(), stop_words=ENGLISH_STOP_WORDS, preprocessor=preprocess_string, strip_accents='unicode', norm='l2', sublinear_tf=True)),\n",
     "                        ('svd', TruncatedSVD(n_components=50))\n",
     "                    ])),\n",
     "                    ('lsa_body', Pipeline([\n",
     "                        ('var', VarSelect(keys='body')),\n",
-    "                        ('tfidf', TfidfVectorizer(ngram_range=(1, 2), preprocessor=preprocess_string)),\n",
+    "                        ('tfidf', TfidfVectorizer(min_df=2, ngram_range=(1, 2), tokenizer=LemmaTokenizer(), stop_words=ENGLISH_STOP_WORDS, preprocessor=preprocess_string, strip_accents='unicode', norm='l2', sublinear_tf=True)),\n",
     "                        ('svd', TruncatedSVD(n_components=100)),\n",
-    "                        ('weight', Weights(weight=10))\n",
+    "                        ('weight', Weights(weight=20))\n",
     "                    ])),\n",
     "                    ('lsa_title', Pipeline([\n",
     "                        ('var', VarSelect(keys='title')),\n",
-    "                        ('tfidf', TfidfVectorizer(preprocessor=preprocess_string)),\n",
+    "                        ('tfidf', TfidfVectorizer(ngram_range=(1, 2), min_df=2, tokenizer=LemmaTokenizer(), stop_words=ENGLISH_STOP_WORDS,preprocessor=preprocess_string, strip_accents='unicode', norm='l2', sublinear_tf=True)),\n",
     "                        ('svd', TruncatedSVD(n_components=50)),\n",
-    "                        ('weight', Weights(weight=2))\n",
+    "                        ('weight', Weights(weight=5))\n",
     "                    ])),\n",
     "                ])),\n",
     "            ('scale', StandardScaler()),\n",
-    "            ('feat', SelectKBest(f_classif, k=75)),\n",
+    "            ('feat', SelectKBest(f_classif, k=100)),\n",
     "            ('model', LogisticRegression())\n",
     "        ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -416,31 +491,31 @@
      "data": {
       "text/plain": [
        "Pipeline(steps=[('strip', FunctionTransformer(accept_sparse=False,\n",
-       "          func=<function <lambda> at 0x7f21417627b8>, pass_y=False,\n",
+       "          func=<function <lambda> at 0x7fe045f44e18>, pass_y=False,\n",
        "          validate=False)), ('union', FeatureUnion(n_jobs=1,\n",
-       "       transformer_list=[('raw_content', Pipeline(steps=[('parse', Parse(key='urlid')), ('var', VarSelect(keys='h...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "       transformer_list=[('h1_', Pipeline(steps=[('var', VarSelect(keys='h1')), ('tfidf', TfidfVectorizer(analyze...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
        "          verbose=0, warm_start=False))])"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipeline.fit(X_train.head(100), y_train.head(100))"
+    "pipeline.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Private Leaderboard Score: 0.87247 **"
+    "** Private Leaderboard Score: 0.87247 -> 0.86875**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +524,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC AUC score on unseen examples:  0.860505867892\n"
+      "ROC AUC score on unseen examples:  0.861375625567\n"
      ]
     }
    ],
@@ -460,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -472,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -481,13 +556,13 @@
      "data": {
       "text/plain": [
        "Pipeline(steps=[('strip', FunctionTransformer(accept_sparse=False,\n",
-       "          func=<function <lambda> at 0x7f9789415268>, pass_y=False,\n",
+       "          func=<function <lambda> at 0x7fe045f44e18>, pass_y=False,\n",
        "          validate=False)), ('union', FeatureUnion(n_jobs=1,\n",
-       "       transformer_list=[('lsa_body', Pipeline(steps=[('var', VarSelect(keys='body')), ('tfidf', TfidfVectorizer(...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "       transformer_list=[('h1_', Pipeline(steps=[('var', VarSelect(keys='h1')), ('tfidf', TfidfVectorizer(analyze...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
        "          verbose=0, warm_start=False))])"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,13 +574,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "predictions = pipeline.predict_proba(test[['body', 'title']])[:, 1]"
+    "predictions = pipeline.predict_proba(test[features])[:, 1]"
    ]
   },
   {
@@ -517,14 +592,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "sample_sub['label'] = predictions\n",
-    "sample_sub.to_csv(os.path.join(basepath, 'submissions/ml_pipeline.csv'), index=False)"
+    "sample_sub.to_csv(os.path.join(basepath, 'submissions/ml_pipeline_snowball_lemmatize.csv'), index=False)"
    ]
   },
   {
