Chi2 Feature Selection with MinMaxScaling

--- a/notebooks/ML_Pipelines.ipynb
+++ b/notebooks/ML_Pipelines.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -36,8 +36,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.feature_selection import f_classif, SelectKBest\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.feature_selection import f_classif, chi2, SelectKBest\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.externals import joblib\n",
     "\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -223,9 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -256,38 +256,45 @@
     {
      "data": {
       "text/plain": [
-       "['/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl']"
+       "['/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl_01.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl_02.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl_03.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl_04.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl_05.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl_06.npy',\n",
+       " '/home/abhishek/Desktop/src/Stumbleupon_classification_challenge/data/processed/test_raw_content.pkl_07.npy']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# dump parsed content to the disk\n",
-    "joblib.dump(parse_train, os.path.join(basepath, 'data/processed/train_raw_content.pkl'))\n",
-    "joblib.dump(parse_test, os.path.join(basepath, 'data/processed/test_raw_content.pkl'))"
+    "joblib.dump(train, os.path.join(basepath, 'data/processed/train_raw_content.pkl'))\n",
+    "joblib.dump(test, os.path.join(basepath, 'data/processed/test_raw_content.pkl'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# load pickle from the disk\n",
-    "parse_train = joblib.load(os.path.join(basepath, 'data/processed/train_raw_content.pkl'))\n",
-    "parse_test = joblib.load(os.path.join(basepath, 'data/processed/test_raw_content.pkl'))"
+    "train = joblib.load(os.path.join(basepath, 'data/processed/train_raw_content.pkl'))\n",
+    "test = joblib.load(os.path.join(basepath, 'data/processed/test_raw_content.pkl'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -297,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -308,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -343,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -378,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -397,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -407,12 +414,12 @@
     "    return ' '.join([sns.stem(word) for word in word_tokenize(x)])\n",
     "\n",
     "def preprocess_string(s):\n",
-    "    return stem_tokens(stopwords_removed)"
+    "    return stem_tokens(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -474,15 +481,15 @@
     "                        ('weight', Weights(weight=5))\n",
     "                    ])),\n",
     "                ])),\n",
-    "            ('scale', StandardScaler()),\n",
-    "            ('feat', SelectKBest(f_classif, k=100)),\n",
+    "            ('scale', MinMaxScaler()),\n",
+    "            ('feat', SelectKBest(chi2, k=100)),\n",
     "            ('model', LogisticRegression())\n",
     "        ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -491,13 +498,13 @@
      "data": {
       "text/plain": [
        "Pipeline(steps=[('strip', FunctionTransformer(accept_sparse=False,\n",
-       "          func=<function <lambda> at 0x7fe045f44e18>, pass_y=False,\n",
+       "          func=<function <lambda> at 0x7efea02252f0>, pass_y=False,\n",
        "          validate=False)), ('union', FeatureUnion(n_jobs=1,\n",
        "       transformer_list=[('h1_', Pipeline(steps=[('var', VarSelect(keys='h1')), ('tfidf', TfidfVectorizer(analyze...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
        "          verbose=0, warm_start=False))])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -524,7 +531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC AUC score on unseen examples:  0.861375625567\n"
+      "ROC AUC score on unseen examples:  0.861660971934\n"
      ]
     }
    ],
@@ -535,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -547,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -556,13 +563,13 @@
      "data": {
       "text/plain": [
        "Pipeline(steps=[('strip', FunctionTransformer(accept_sparse=False,\n",
-       "          func=<function <lambda> at 0x7fe045f44e18>, pass_y=False,\n",
+       "          func=<function <lambda> at 0x7efea02252f0>, pass_y=False,\n",
        "          validate=False)), ('union', FeatureUnion(n_jobs=1,\n",
        "       transformer_list=[('h1_', Pipeline(steps=[('var', VarSelect(keys='h1')), ('tfidf', TfidfVectorizer(analyze...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
        "          verbose=0, warm_start=False))])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -592,14 +599,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "sample_sub['label'] = predictions\n",
-    "sample_sub.to_csv(os.path.join(basepath, 'submissions/ml_pipeline_snowball_lemmatize.csv'), index=False)"
+    "sample_sub.to_csv(os.path.join(basepath, 'submissions/ml_pipeline_chi2.csv'), index=False)"
    ]
   },
   {
