--- a/notebooks/ML_Pipelines.ipynb
+++ b/notebooks/ML_Pipelines.ipynb
@@ -517,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Private Leaderboard Score: 0.87247 -> 0.86875**"
+    "** Private Leaderboard Score: 0.87341 **"
    ]
   },
   {
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
